ESAUDE-23 | fix for the ui overflow issue on the create mapping page

--- a/omod/src/main/webapp/resources/dhisconnector.css
+++ b/omod/src/main/webapp/resources/dhisconnector.css
@@ -58,3 +58,8 @@
 	background-color: #E8E3E3;
 	border-style: outset;
 }
+
+.dataElementDragDestination, .comboOptionDragDestination {
+	height: 28px;
+	overflow: auto;
+}
